--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 <h2> Hello guys!</h2>
 <h3>Lalaland</h3>
 <h4>Jay branch</h4>
-<h1>Isaac Remains the supreme branch</h1>
+<h1>Isaac is Unstoppable</h1>
+<h2>Zaggy is irreplaceable</h2>
 </body>
 </html>
